objects/Course_Invoice__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Course Invoices</relationshipLabel>
    <relationshipName>Course_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>