objects/Course_Invoice__c/fields/Expense_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Expense_Invoice_Number__c</fullName>
    <formula>SUBSTITUTE(Name, Name , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Invoice Number</label>
    <type>Text</type>
</CustomField>