objects/Course_Invoice__c/fields/Expense_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sub_Total__c</fullName>
    <label>Expense Sub Total</label>
    <summarizedField>Expense_Items__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Items__c.Course_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>