objects/Course_Invoice__c/fields/Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total__c</fullName>
    <formula>Expense_Sub_Total__c + Mileage_Amount__c + Expense_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>