objects/Course_Invoice__c/fields/Expense_VAT__c.field-meta.xml
<CustomField>
    <fullName>Expense_VAT__c</fullName>
    <formula>( Mileage_Amount__c + Expense_Sub_Total__c ) *  VAT_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>