objects/Course_Invoice__c/fields/Mileage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Amount__c</fullName>
    <label>Mileage Amount</label>
    <summarizedField>Expense_Items__c.Mileage_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Items__c.Course_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>