objects/Course_Invoice__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Retention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>