objects/Course_Invoice__c/fields/Service_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Hourly_Rate__c</fullName>
    <label>Service Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>