objects/Course_Invoice__c/fields/Service_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Total__c</fullName>
    <formula>Service_Invoice_VAT__c + Service_Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>