objects/Course_Invoice__c/fields/Service_Invoice_VAT__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_VAT__c</fullName>
    <formula>Service_Sub_Total__c *  VAT_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Invoice VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>