objects/Course_Invoice__c/fields/Service_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Service_Total_Hours__c</fullName>
    <label>Service Total Hours</label>
    <summarizedField>Service_Item__c.Hours__c</summarizedField>
    <summaryForeignKey>Service_Item__c.Course_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>