objects/Course_Invoice__c/fields/VAT_Value__c.field-meta.xml
<CustomField>
    <fullName>VAT_Value__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>VAT Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>