objects/Course_Invoice__c/fields/Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Amount__c</fullName>
    <formula>Service_Sub_Total__c  -( Retention__c *  Service_Sub_Total__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>