objects/Course_Invoice__c/validationRules/No_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Paid_Date__c &gt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Paid_Date__c</errorDisplayField>
    <errorMessage>The date must not be in the future.</errorMessage>
</ValidationRule>