objects/Course_Invoice__c/validationRules/No_Future_Date_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>Submitted_Date__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Submitted_Date__c</errorDisplayField>
    <errorMessage>The date must not be in the future.</errorMessage>
</ValidationRule>