objects/Course_Invoice__c/validationRules/Submitted_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Status</fullName>
    <active>true</active>
    <description>Submitted status only allowed if Submitted Date is present</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Submitted&quot;)  , ISBLANK(  Submitted_Date__c  ) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>For status to be &quot;Submitted&quot;, Submitted Date is required</errorMessage>
</ValidationRule>