objects/Course_Invoice__c/listViews/Course_Invoices.listView-meta.xml
<ListView>
    <fullName>Course_Invoices</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>Course Invoices</label>
</ListView>