objects/Course_Invoice__c/listViews/CourseInvoiceList.listView-meta.xml
<ListView>
    <fullName>CourseInvoiceList</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>CourseInvoiceList</label>
</ListView>