objects/Course_Invoice__c/listViews/Invoices.listView-meta.xml
<ListView>
    <fullName>Invoices</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Expense_Total__c</columns>
    <filterScope>Mine</filterScope>
    <label>Invoices</label>
</ListView>