objects/Course_Invoice__c/listViews/Invoices_View.listView-meta.xml
<ListView>
    <fullName>Invoices_View</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>Invoices View</label>
</ListView>